--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </li>
           </ul>
         </nav>
-        <g class="logo-icon">
+        <div class="logo-icon">
           <h1>Paw Print Kennels</h1>
-          <svg class="logo-icon" aria-labelledby="logo" aria-describedby="logoDesc"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 140 120" style="enable-background:new 0 0 140 120" xml:space="preserve">
+          <svg class="logo-icon" aria-labelledby="logo" aria-describedby="logoDesc" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 140 120" style="enable-background:new 0 0 140 120" xml:space="preserve">
             <title id="logo">Pembroke Welsh Corgi Logo</title>
             <desc id="logoDesc">This logo shows a dog paw print with text above the image that says Paw Print Kennels</desc>
             <ellipse cx="70.4" cy="69.9" rx="50.4" ry="50.1"/>
@@ -56,7 +56,7 @@
               <path class="st2" d="M80.4 45.2c0 5.7-4.6 6.8-10.3 6.8-5.7 0-10.3-1.1-10.3-6.8S64.4 35 70.1 35c5.7 0 10.3 4.6 10.3 10.2zM45.7 83.1c0-13.4 11-18.1 24.4-18.1s24.4 4.7 24.4 18.1-15.1 21.6-24.4 21.6c-8.9 0-24.4-8.2-24.4-21.6zM104 64.1c-4 4-8.1 1.5-12.1-2.5s-6.5-8-2.5-12 10.5-4 14.6 0c4 4 4 10.5 0 14.5zM51.5 49.6c4 4 1.5 8-2.5 12s-8.1 6.5-12.1 2.5-4-10.5 0-14.5 10.5-4 14.6 0z"/>
             </g>
           </svg>
-        </g>
+        </div>
         <h1>
           Pembroke Welsh Corgi
         </h1>
