--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="logo-icon">
           <h1>Paw Print Kennels</h1>
-          <svg class="logo-icon" aria-labelledby="logo" aria-describedby="logoDesc" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 140 120" style="enable-background:new 0 0 140 120" xml:space="preserve">
+          <svg aria-labelledby="logo" aria-describedby="logoDesc" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 140 120" style="enable-background:new 0 0 140 120" xml:space="preserve">
             <title id="logo">Pembroke Welsh Corgi Logo</title>
             <desc id="logoDesc">This logo shows a dog paw print with text above the image that says Paw Print Kennels</desc>
             <ellipse cx="70.4" cy="69.9" rx="50.4" ry="50.1"/>
