--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul class="navbar">
             <li>
               <a href="#">
-                <svg class="heart-icon" aria-labelledby="heart" xmlns="http://www.w3.org/2000/svg" width="28" height="24" style="enable-background:new 0 0 28 24" xml:space="preserve">
+                <svg class="heart-icon" aria-labelledby="heart" xmlns="http://www.w3.org/2000/svg" style="enable-background:new 0 0 28 24" xml:space="preserve">
                   <title id="heart">Pembroke Welsh Corgi homepage</title>
                   <path d="M28 7.1C28 4.2 25.5 0 20.7 0 15.8 0 14 6.6 14 6.6S12.2 0 7.3 0C2.5 0 0 4.2 0 7.1c0 2.1-.6 3.7 4.2 8.7C6.3 18 9.7 19.7 14 24c4.3-4.3 7.8-6 9.8-8.1 4.8-5 4.2-6.7 4.2-8.8z"/>
                 </svg>
@@ -27,7 +27,7 @@
             </li>
             <li>
               <a href="#">
-                <svg class="location-icon" aria-labelledby="location" xmlns="http://www.w3.org/2000/svg" width="24" height="24" style="enable-background:new 0 0 24 24" xml:space="preserve">
+                <svg class="location-icon" aria-labelledby="location" xmlns="http://www.w3.org/2000/svg" style="enable-background:new 0 0 24 24" xml:space="preserve">
                   <title id="location">Locate Pembroke Welsh Corgi</title>
                   <path d="M19.5 7.1C19.3 3.2 16 0 12.1 0c-2 0-3.9.8-5.3 2.2-1.3 1.3-2.1 3-2.3 4.9V8c.3 9.3 6.2 15 6.9 15.7.2.2.4.3.7.3.2 0 .5-.1.7-.3.7-.6 6.5-6.4 6.8-15.6-.1-.2-.1-.9-.1-1zM9 7.5c0-1.7 1.3-3 3-3s3 1.3 3 3-1.3 3-3 3-3-1.3-3-3z"/>
                 </svg>
@@ -36,7 +36,7 @@
             </li>
             <li>
               <a href="#">
-                <svg class="contact-icon" aria-labelledby="contact" xmlns="http://www.w3.org/2000/svg" width="28" height="24" style="enable-background:new 0 0 28 24" xml:space="preserve">
+                <svg class="contact-icon" aria-labelledby="contact" xmlns="http://www.w3.org/2000/svg" style="enable-background:new 0 0 28 24" xml:space="preserve">
                   <title id="contact">Connect with Pembroke Welsh Corgi</title>
                   <path d="M10.1 22.5c1.5.7 3.1 1 4.8 1 6.5 0 11.8-5.3 11.8-11.8C26.6 5.3 21.3 0 14.8 0S3.1 5.3 3.1 11.8c0 1.8.4 3.5 1.1 5-.1.1-3.9 4.8-2.5 6.2l.5.5c1.5 1.5 7.7-.8 7.9-1z"/>
                 </svg>
